1.0.9: 2001-07-10
!!!	- bugfix: limitSize still was broken (Max Kirillov)
!!!	- experimental feature: antialiasing for icons and text;
		  configure with --enable-antialiasing and --enable-xfreetype;
		  --enable-antialiasing attempts to activate XFreeType support
		  implicitly; Xnest (from XFree86 4.1.0) crashes on startup 
		  when Xnest is invisible - why? Are there other X servers
		  with this problem; Xft ignores X clipping information,
		  as a result button, menu labels are rendered multiple times
	- feature: allow to toggle between environment and root property
		  base GNOME autodetection on compile time;
		  configure with --with-gnome-root-property[=atom] and
		  --without-gnome-root-property
	- feature: menu item to toggle doNotCover flag;
		  due some internas the window has to be sticky
		  (allWorkspaces flag) to let this option take effect.
	- feature: Move/Resize FX (experimental bloat);
		  options: MoveSizeFXFontName (string),
		  MoveSizeInterior, MoveSizeDimensionLines,
		  MoveSizeGaugeLines, MoveSizeDimensionLabels,
		  MoveSizeGeometryLabels (bitmasks);
		  configure with --enable-movesize-fx;
		  problem: Expose problems in other windows with opaque
		  	   mode. Need to grab XServer. Better solutions?
	- feature: TitleBarHorzOffset/TitleBarVertOffset
	- feature: TimeFormatAlt option (Jan Krupa)
	- feature: icon tray (Jan Krupa)
		  options: TaskBarShowTray, TrayDrawBevel, TrayShowAllWindows
		  window option: tray (Ignore: no icon on tray (default);
		    Minimized: icon on tray and if not minimized also
		    on task pane; Exclusive: icon on tray only (and not on 
		    task pane))
	- bugfix: renamed START_PIXMAP from linux.xpm to icewm.xpm
	- bugfix: #427048 compatibility issues in Makefile.in
	- bugfix: #424194 ellipsis for long labels on mini icons
	- feature: pixmap for workspace buttons: create a "workspace"
		  subdirectory and name your workspaces accordingly to the
		  pixmaps in this directory