@@ -1,6 +1,7 @@
 1.0.9: 2001-07-10
 !!!	- bugfix: limitSize still was broken (Max Kirillov)
-!!!	- experimental feature: antialiasing for icons and text;
+	- bugfix: use argv[0] to build the themes menu
+	- experimental feature: antialiasing for icons and text;
 		  configure with --enable-antialiasing and --enable-xfreetype;
 		  --enable-antialiasing attempts to activate XFreeType support
 		  implicitly; Xnest (from XFree86 4.1.0) crashes on startup 
